--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 							<div>
 								<label>
 									<span class="modal__label">Имя</span>
-									<input class="modal__input" type="features__text" name="name" id="user_name" required />
+									<input class="modal__input" type="name" name="name" id="user_name" required />
 									<svg class="label__icons" width="12" height="12">
 										<use href="./image/icons.svg#icon-human"></use>
 									</svg>
